# LibTorch_QMC

./: .gitmodules  Pytorch 2nd Derivatives.ipynb  Pytorch Jacobian.ipynb  setup.py
config/: cfg.json  harmonic_oscillator.json
src/: CMakeLists.txt
src/mlqm/: CMakeLists.txt  benchmark.cxx  benchmark_jacobian.cxx  mlqm.cxx  tests.cxx
src/mlqm/config/: CMakeLists.txt  HamiltonianConfig.cxx  HamiltonianConfig.h  ModelConfig.cxx  ModelConfig.h  OptimizerConfig.cxx  OptimizerConfig.h  SamplerConfig.cxx  SamplerConfig.h  config.cxx  config.h
src/mlqm/hamiltonians/: BaseHamiltonian.cxx  BaseHamiltonian.h  CMakeLists.txt  NuclearHamiltonian.cxx  NuclearHamiltonian.h
src/mlqm/models/: CMakeLists.txt  DeepSetsCorrelator.cxx  DeepSetsCorrelator.h  MLP.cxx  MLP.h  ManyBodyWavefunction.cxx  ManyBodyWavefunction.h  ModelConfig.h  models.cxx  models.h
src/mlqm/optimizers/: Accumulator.cxx  Accumulator.h  AdaptiveDelta.cxx  AdaptiveDelta.h  BaseOptimizer.cxx  BaseOptimizer.h  CMakeLists.txt  GradientCalculator.cxx  GradientCalculator.h  JacobianCalculator.cxx  JacobianCalculator.h
src/mlqm/sampler/: CMakeLists.txt  MetropolisSampler.cxx  MetropolisSampler.h  SamplerConfig.h  sampler.h
